--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ description: > # this means to ignore newlines until "baseurl:"
   Summaries of recent research projects & technology.
 # social links
 github_username:  wilkieolin # DO NOT include the @ character, or else the build will fail!
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
 
 show_excerpts: true # set to false to remove excerpts on the homepage
