--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: Research & Technology Overview
 author: Wilkie Olin-Ammentorp
-email: your-email@domain.com
+# email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Summaries of recent research projects & technology.
+  Summaries of recent research projects & technology, (c) 2021 Wilkie Olin-Ammentorp
 # social links
 github_username:  wilkieolin # DO NOT include the @ character, or else the build will fail!
-theme: jekyll-theme-minimal
+theme: minima
+excerpt_separator: <!--more-->
 
 show_excerpts: true # set to false to remove excerpts on the homepage
