--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Research & Technology Overview
 author: Wilkie Olin-Ammentorp
 # email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Summaries of recent research projects & technology, (c) 2021 Wilkie Olin-Ammentorp
+  Summaries of recent research projects & technology, (c) 2021-2022 Wilkie Olin-Ammentorp
 # social links
 github_username:  wilkieolin # DO NOT include the @ character, or else the build will fail!
 theme: minima
